--- a/index.css
+++ b/index.css
@@ -1,3 +1,108 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
-    margin: 0;
+	text-align: center;
+	background-color: #f4f4f4;
+	font-family: 'Inter', sans-serif;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+
+#hero {
+	height: 285px;
+	background-color: #6943ff;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#hero h1 {
+	color: #fff;
+	font-size: 28px;
+	font-weight: 800;
+	line-height: 38px;
+	letter-spacing: -0.84px;
+	margin: 33px 51px 30px 51px;
+}
+
+#input-box {
+	width: 117px;
+	height: 83px;
+	border-radius: 5px;
+	border: 2px solid #b295ff;
+	background-color: #6943ff;
+	color: #fff;
+	font-size: 58px;
+	font-weight: 800;
+	line-height: 24px;
+	text-align: center;
+	margin-bottom: 27px;
+}
+
+#convert-btn {
+	background-color: #ffffff;
+	width: 117px;
+	height: 42px;
+	padding: 9px 27.5px;
+	color: #3d3d3d;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 24px;
+	border-radius: 5px;
+	box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
+	margin-bottom: 34px;
+}
+
+#convert-btn:hover {
+	cursor: pointer;
+}
+
+.main-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.card {
+	width: 500px;
+	height: 109px;
+	border-radius: 4.681px 0px 0px 0px;
+	background: #fff;
+	margin: 23px 25px;
+	color: #5a537b;
+	text-align: center;
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 20px;
+	display: flex;
+	flex-direction: column;
+}
+
+.card-1 {
+	margin-top: 36px;
+}
+
+.title {
+	margin: 31px 77px 5px 77px;
+}
+
+#length,
+#volume,
+#mass {
+	color: #353535;
+	text-align: center;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	margin-top: 10px;
 }
